# streamlit-template

./: .gitignore  README.md  lefthook.yml  main.py  project.mdc  pyproject.toml
.cursor/rules/: project.mdc
src/: __init__.py
src/components/: __init__.py  data_viz.py
src/pages/: 01_data_explorer.py
src/utils/: data_loader.py
tests/: __init__.py  test_data_explorer.py  test_data_loader.py  test_data_viz.py  test_main.py
